panoiq_stackstorm/pinot/pinot-github-events-setup.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: pinot-github-events-data-into-kafka
  namespace: development
  labels:
    app: pinot-github-events-data-into-kafka
spec:
  selector:
    matchLabels:
      app: pinot-github-events-data-into-kafka
  replicas: 1
  template:
    metadata:
      labels:
        app: pinot-github-events-data-into-kafka
    spec:
     containers:
        - image: apachepinot/pinot:latest
          imagePullPolicy: Always
          name: pinot-github-events-data-into-kafka
          args: [ "StreamGitHubEvents", "-topic", "pullRequestMergedEvents", "-personalAccessToken", "token_value", "-kafkaBrokerList", "kafka:9092", "-schemaFile", "/opt/pinot/examples/batch/githubEvents/rawdata/githubEvents_data.json" ]
          volumeMounts:
            - name: examples
              mountPath: /var/pinot/examples
      restartPolicy: Always
      volumes:
        - name: examples
          configMap:
            name: examples
