panoiq_stackstorm/pinot/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pinot-ingress
#  annotations:
#    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: "HOST"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pinot-controller-external
                port: 
                  number: 30588
  ingressClassName: nginx
